to_be_completed

--- a/03_more_first_programs(1) (1).ipynb
+++ b/03_more_first_programs(1) (1).ipynb
@@ -53,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower snake case is when, in lowercase, the words are joined together with underscores rather than space. For example, (snake_case), (lower_level), (cyber_security)"
+    "lower snake case is when, in lowercase, the words are joined together with underscores rather than space. \n",
+    "For example, (snake_case), (lower_level), (cyber_security)"
    ]
   },
   {
@@ -71,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCREAMING SNAKE CASE TELLS US that the letters will be in all caps."
+    "SCREAMING SNAKE CASE tells us that the letters will be in all caps,\n",
+    "this tells us its a constant value."
    ]
   },
   {
@@ -110,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no"
+    "No, convention, everyone does it without space, therefore more people will be likely to undertsand the code"
    ]
   },
   {
@@ -126,7 +128,7 @@
    "id": "cb569e9a",
    "metadata": {},
    "source": [
-    "doesnt matter"
+    "Yes, but remember to keep the consistency"
    ]
   },
   {
@@ -142,7 +144,7 @@
    "id": "a97d1302",
    "metadata": {},
    "source": [
-    "Helps with the readability of the code, stops it from looking like one unreadable code block"
+    "*** Helps with the readability of the code, stops it from looking like one unreadable code block ***"
    ]
   },
   {
@@ -157,7 +159,9 @@
    "cell_type": "markdown",
    "id": "9cdfa950",
    "metadata": {},
-   "source": []
+   "source": [
+    "The last line of every program should be left blank!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,6 +169,14 @@
    "metadata": {},
    "source": [
     "_What is a program comment? Why are these almost always best avoided?_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4af14fc",
+   "metadata": {},
+   "source": [
+    "Comments are seperate from the code itself, used to describe the code lines. Best avoided as its time consuming and a waste of space."
    ]
   },
   {
@@ -177,6 +189,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8c3084e",
+   "metadata": {},
+   "source": [
+    "A document that provides coding conventions for python code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "633b36cd",
    "metadata": {},
    "source": [
@@ -185,10 +205,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b932a1af",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d842e63b0352faef",
    "metadata": {},
    "source": [
     "_AI-generated program code is very easy to spot. Can you work out any features it might have that makes this so?_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6eacda",
+   "metadata": {},
+   "source": [
+    "No SPaG errors\n",
+    "Short sentences\n",
+    "Sophisticated language"
    ]
   },
   {
@@ -228,7 +264,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import pi\n",
+    "\n",
+    "radius_in_inches = 10 / 2\n",
+    "radius_in_centimetres = radius_in_inches * 2.54\n",
+    "\n",
+    "pizza_area = pi * radius_in_centimetres * radius_in_centimetres\n",
+    "print(f'Area of pizza...')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "981ec7e21bee3d8e",
    "metadata": {
     "ExecuteTime": {
@@ -272,8 +316,23 @@
      "start_time": "2025-08-18T14:26:17.856623Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference in weight: -2\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_day_one = int(input('Enter weight on one day (in grams): '))\n",
+    "weight_day_two = int(input('Enter weight on two day (in grams): '))\n",
+    "\n",
+    "difference_in_weight = weight_day_two - weight_day_one\n",
+    "\n",
+    "print(f'Difference in weight: {difference_in_weight}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba5b454142037fa0",
    "metadata": {
     "ExecuteTime": {
@@ -294,8 +353,23 @@
      "start_time": "2025-08-18T14:27:17.121610Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference in weight: 3.0: .2f\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_day_one = float(input('Enter weight on one day (in grams): '))\n",
+    "weight_day_two = float(input('Enter weight on two day (in grams): '))\n",
+    "\n",
+    "difference_in_weight = weight_day_two - weight_day_one\n",
+    "\n",
+    "print(f'Difference in weight: {difference_in_weight}: .2f')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,7 +390,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sparrows_day_one = int(input('Enter sparrows on one day: '))\n",
+    "sparrows_day_two = int(input('Enter sparrows on two day: '))\n",
+    "\n",
+    "difference_in_sparrows = sparrows_day_two - sparrows_day_one\n",
+    "\n",
+    "print(f'Difference in sparrows: {abs(difference_in_sparrows)}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,7 +420,19 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "NUMBER_IN_PUNNET = 4\n",
+    "\n",
+    "number_of_fruit = int(input('Enter number of fruit: '))\n",
+    "\n",
+    "    if number_of_fruit >= 0:                        \n",
+    "        print(f'Number of punnets: {number_of_fruit // NUMBER_IN_PUNNET}')\n",
+    "\n",
+    "    else:\n",
+    "        print('Invalid number of fruit')\n",
+    "except ValueError:\n",
+    "    print('Invalid number of fruit')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -427,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
