--- a/04_making_tables (1).ipynb
+++ b/04_making_tables (1).ipynb
@@ -65,12 +65,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27c8a4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Blast off!\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 10\n",
+    "while count > 0:\n",
+    "    print(count)\n",
+    "    count -= 1\n",
+    "print('Blast off!')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f25868ec",
    "metadata": {},
    "source": [
     "_Print the integers from 10 to 1, **backwards**, and then the message `Blast Off!`. Do it with a `for` and then a `while`. Which\n",
     "is best?_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e76c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "for count in range(1, 11):\n",
+    "        total\n",
+    "    print(total)"
    ]
   },
   {
@@ -98,12 +143,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a6b5b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in \"Elderberry\":\n",
+    "    print(c)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e5f07675",
    "metadata": {},
    "source": [
     "_Display a prompt to your user (something like `What is your favourite colour? `), and keep doing that until they\n",
     "enter `blue`. Use a different colour if your favourite colour is not blue._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01a0111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    colour = input('What is your favourite colour?')\n",
+    "    if colour == 'blue':\n",
+    "        break"
    ]
   },
   {
@@ -114,6 +183,17 @@
     "_Read in a string, and print it out reversed._\n",
     "\n",
     "_(OK. This is a trick question. You don't need a loop. Sorry.)_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d74dffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colour = input('What is your favourite colour?')\n",
+    "print (f'Your favourite colour is {colour}. Backwards that is {colour[: -1]}.')\n"
    ]
   },
   {
@@ -144,7 +224,11 @@
    "id": "b6ded19d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ounces = int(input('Enter weight in ounces): '))\n",
+    "grams = ounces * 28.3495\n",
+    "print(f'In grams that is {grams: .2f}.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,7 +244,11 @@
    "id": "39819c57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for ounces in range(17):\n",
+    "    grams = ounces * 28.3495\n",
+    "    print(f'{ounces:>2} oz:  {grams:>6.2f} g')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +307,10 @@
    "id": "4d506d3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for litres in [1, 2, 4, 8]:\n",
+    "    print(f'{litres:>2} litres: {litres * 1.75975:>5.2f} pints')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
