--- a/00_introduction_to_github (2).ipynb
+++ b/00_introduction_to_github (2).ipynb
@@ -53,6 +53,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d611a2fe",
+   "metadata": {},
+   "source": [
+    "Yasmin Bashir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc507d23",
    "metadata": {},
    "source": [
