Completed fully up to notebook 2 (double checked)

--- a/02_first_programs (3).ipynb
+++ b/02_first_programs (3).ipynb
@@ -146,9 +146,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "600eaa8c",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8dd441ba",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number doubled is 30\n",
+      "The square root of 15 is 3.87\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -188,10 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dbec81df0f135935",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello, World!')"
    ]
@@ -216,10 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41710f68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello, ', end='')\n",
     "print('World!')"
@@ -237,10 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "981ec7e21bee3d8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Bash! It is good to meet you!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Greetings! What is your name? ')\n",
     "print(f'Hello, {name}! It is good to meet you!')"
@@ -421,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -435,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
