Notebook 4 gaps filled - moved to LBU repo

--- a/04_making_tables (1).ipynb
+++ b/04_making_tables (1).ipynb
@@ -259,12 +259,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d0f219a",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ca9c8144",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ounces = 0\n",
+    "while ounces < 17:\n",
+    "        grams = ounces * 28.3495\n",
+    "        print(f'{ounces:>2} oz: {grams:>6.2f} g')\n",
+    "        ounces += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,7 +338,16 @@
    "id": "390c7f3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "size = int(input(\"Enter an number: \"))\n",
+    "\n",
+    "row = 0\n",
+    "while row < size:\n",
+    "    print(f'{\"#\" * size}')\n",
+    "    row += 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,7 +363,17 @@
    "id": "e9e23784",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "length = int(input(\"Enter a number: \"))\n",
+    "height = int(input(\"Enter a different number: \"))\n",
+    "\n",
+    "\n",
+    "row = 0\n",
+    "while row < height:\n",
+    "    print(f'{\"#\" * length}')\n",
+    "    row += 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,7 +389,21 @@
    "id": "386f0d87",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "triangleHeight = int(input(f\"Enter the triangle height : \"))\n",
+    "\n",
+    "if triangleHeight <= 0:\n",
+    "    print(f\"Height must be a positive integer.\")\n",
+    "else:\n",
+    "    row = 1\n",
+    "    while row <= triangleHeight:\n",
+    "        \n",
+    "        hashes = 2 * row - 1\n",
+    "        spaces = triangleHeight - row\n",
+    "        print(f'{\" \" * spaces}{\"#\" * hashes}')\n",
+    "        row += 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
