--- a/05_off_the_happy_path.ipynb
+++ b/05_off_the_happy_path.ipynb
@@ -313,7 +313,22 @@
    "id": "0cbfb1cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    miles = int(input('Enter a distance in miles: '))\n",
+    "\n",
+    "    if miles >= 0:\n",
+    "        kilometres = miles * 1.606344\n",
+    "\n",
+    "        print(f'{miles} miles is {kilometres: .2f} kilometres.')\n",
+    "    else:\n",
+    "        print('Cannot have negative miles!')\n",
+    "\n",
+    "except ValueError:\n",
+    "        print('Integer value required!')\n",
+    "except ZeroDivisionError:\n",
+    "     print('Must have at least one student! ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -377,7 +392,65 @@
    "id": "6367b6c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " \n",
+    "try:\n",
+    "    \n",
+    "    number_of_sweets = int(input('Enter number of sweets: '))\n",
+    "\n",
+    "    if number_of_sweets < 0:\n",
+    "        print('Error: Cannot have a negative number of sweets.')\n",
+    "    elif  number_of_sweets == 0:\n",
+    "        \n",
+    "        number_of_students = int(input('Enter number of students: '))\n",
+    "        if number_of_students < 0:\n",
+    "            print('Error: Cannot have a negative number of students.')\n",
+    "        elif number_of_students == 0:\n",
+    "            print('There are no sweets and no students. Nothing to distribute.')\n",
+    "        else:\n",
+    "            print('There are no sweets to distribute. Each student gets 0 sweets.')\n",
+    "            print('There will be no sweets left over.')\n",
+    "    else:\n",
+    "       \n",
+    "        number_of_students = int(input('Enter number of students: '))\n",
+    "\n",
+    "        if number_of_students < 0:\n",
+    "            print('Error: Cannot have a negative number of students.')\n",
+    "        elif number_of_students == 0:\n",
+    "           \n",
+    "            print('There are no students to receive sweets.')\n",
+    "            print(f'All {number_of_sweets} sweets remain undistributed.')\n",
+    "        else:\n",
+    "            \n",
+    "            sweets_per_student = number_of_sweets // number_of_students\n",
+    "            sweets_left_over = number_of_sweets % number_of_students\n",
+    "\n",
+    "            \n",
+    "            if sweets_per_student == 1:\n",
+    "                print('Each student gets 1 sweet.')\n",
+    "            else:\n",
+    "                print(f'Each student gets {sweets_per_student} sweets.')\n",
+    "\n",
+    "            \n",
+    "            if sweets_left_over == 0:\n",
+    "                print('There will be no sweets left over.')\n",
+    "            elif sweets_left_over == 1:\n",
+    "                print('There will be 1 sweet left.')\n",
+    "            else:\n",
+    "                print(f'There will be {sweets_left_over} sweets left.')\n",
+    "except ValueError:\n",
+    "    print('Error: Integer value required!')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5e4aaf",
+   "metadata": {},
+   "source": [
+    "_Now for some LBYL. We can't have negative values for the sweets or students. Zero would make sense, though. So add code now to detect these error cases and display a message. Can you get a different message for each case?_\n",
+    "\n",
+    "_For full marks here (!), the program should really not ask for the number of students if the number of sweets is invalid._"
+   ]
   },
   {
    "cell_type": "markdown",
